--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM node:18-slim
+FROM node:18
 
 # For compatibility with M1 Macs
 RUN apt-get update && \
@@ -11,10 +11,11 @@ RUN apt-get update && \
 WORKDIR /app
 
 # npm install files
-COPY package*.json ./
+COPY package.json ./
+COPY yarn.lock ./
 COPY prisma ./prisma/
 
 # Install app dependencies
-RUN npm install
+RUN yarn install
 
-CMD npm run start:dev
+CMD yarn start:dev
