--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "cd ../backend && npm run generate"
+    "generate": "cd ../backend && yarn generate"
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs-pro-react": "^2.2.0",
